syntax = "proto3";

import "wrappers.proto";

option java_multiple_files = true;
option java_package = "kr.co.vcnc.gryphon.protocol";
option java_outer_classname = "ErrorProto";

package taxi;

enum ErrorCode {
    UNKNOWN = 0;

    // 일반적인 에러. 다양한 경우에 이 에러가 발생한다.
    // 클리이언트에서 따로 처리할 필요 없이 적당히 처리해주면 된다.
    BAD_REQUEST = 1000;

    // 로그인을 하려 했으나, 계정이 존재하지 않는 경우.
    ACCOUNT_DOES_NOT_EXIST = 1001;

    // 지오코딩하다가 에러가 난 경우
    GEOCODING_FAILURE = 1002;

    // 요청 불가능한 출발지인 경우.
    UNAVAILABLE_ORIGIN = 1003;

    // 요청 불가능한 도착지인 경우.
    UNAVAILABLE_DESTINATION = 1004;

    // 요청 불가능한 라이드 타입인 경우.
    UNAVAILABLE_RIDE_TYPE = 1005;

    // 현재 클라이언트 버전이 더 이상 유효하지 않은 경우
    UPGRADE_NEEDED = 1006;

    // 요청 불가능한 시간인 경우.
    UNAVAILABLE_TIME = 1007;

    // 어시스트 등록 필요
    ASSIST_REGISTRATION_REQUIRED = 1008;

    // 어시스트 등록된 결제수단이 아님
    PAYMENT_METHOD_NOT_REGISTERED_FOR_ASSIST = 1009;

    // 결제 프로필이 호출 불가 상태
    INVALID_PAYMENT_PROFILE_STATUS = 1010;

    // 휴면 유저가 로그인했을 경우
    INACTIVE_USER = 1011;

    // 경유지 설정이 불가한 경우 (최대개수 초과, 미지원 지역 등)
    UNAVAILABLE_WAYPOINTS = 1012;

    // 이미 라이드의 리뷰를 남긴 경우
    RIDE_ALREADY_REVIEWED = 2000;

    // 라이드에 리뷰가 없는 경우
    RIDE_REVIEW_DOES_NOT_EXIST = 2001;

    // 이미 예약상품의 리뷰를 남긴 경우
    TRIP_ALREADY_REVIEWED = 2002;

    // 호출예약이 이미 수락된 경우
    RIDE_RESERVATION_ALREADY_ACCEPTED = 2003;

    // 결제 수단의 유효 기간이 만료된 경우
    PAYMENT_METHOD_EXPIRED = 3000;

    // 결제 수단에 미수금이 있는 경우
    HAS_FAILED_PAYMENT = 3001;

    // 미수락한 약관이 있는 경우
    HAS_UPDATED_TERMS = 3003;

    // 미수락한 요금 위임 약관이 있는 경우
    HAS_UPDATED_FEE_TERMS = 3006;

    // 비즈니스 선불 크래딧이 다 떨어진 경우
    INSUFFICIENT_BIZ_CREDIT = 3004;

    // 비즈니스 선불 크래딧으로 팁을 결제하려는 경우
    TIP_WITH_BIZ_CREDIT = 3005;

    // 결제 수단 등록에 실패한 경우
    PAYMENT_METHOD_REGISTER_FAILED = 3002;

    // Authorization 헤더에 값이 없는 경우.
    AUTHORIZATION_REQUIRED = 4000;

    // AccessToken이 유효하지 않은 경우.
    INVALID_ACCESS_TOKEN = 4001;

    // 로그인 시 유효하지 않은 비밀번호인 경우.
    INVALID_PASSWORD = 4002;

    // EstimationToken이 유효하지 않은 경우.
    INVALID_ESTIMATION_TOKEN = 4003;

    // 교통상황의 변화, 토큰 만료 등으로 Estimation을 다시 해야하는 경우.
    REESTIMATION_NEEDED = 4004;

    // 로그인 시 전화번호가 비어있는 경우
    INVALID_PHONE_NUMBER = 4005;

    // 픽업포인트까지 위치가 너무 먼 경우
    TOO_FAR_PICKUP_POINT = 4006;

    // 출발지와 픽업포인트 위치가 너무 먼 경우
    TOO_FAR_BETWEEN_ORIGIN_AND_PICKUP_POINT = 4007;

    // 자동차 제어에 실패한 경우
    VEHICLE_CONTROL_FAILURE = 5000;

    // 해당 액션을 수행하려면 재확인이 필요한 경우
    CONFIRM_REQUIRED = 5001;

    // 해당 액션을 수행하려면 이미지가 들어간 팝업의 재확인이 필요한 경우
    BAN_CONFIRM_REQUIRED = 5002;

    // 해당 액션을 수행하려면 중요한 재확인이 필요한 경우
    IMPORTANT_CONFIRM_REQUIRED = 5003;

    // 휴대폰 인증번호가 맞지 않는 경우.
    INVALID_VERIFICATION_CODE = 6000;

    // 휴대폰 인증을 위한 토큰이 만료된 경우
    VERIFICATION_TOKEN_EXPIRED = 6001;

    // 휴대폰 인증을 위한 토큰이 유효하지 않은 경우
    INVALID_VERIFICATION_TOKEN = 6002;

    // 휴대폰 인증을 위한 토큰이 만료된 경우
    VERIFIED_TOKEN_EXPIRED = 6003;

    // 휴대폰 인증을 위한 토큰이 유효하지 않은 경우
    INVALID_VERIFIED_TOKEN = 6004;

    // 비밀번호 재설정을 위한 토큰이 유효하지 않은 경우
    INVALID_RESET_PASSWORD_TOKEN = 6005;

    // 비밀번호 재설정을 위한 토큰이 만료된 경우
    RESET_PASSWORD_TOKEN_EXPIRED = 6006;

    // 쿠폰 등록에 실패한 경우
    RIDE_COUPON_REGISTER_FAILURE = 6007;

    // 쿠폰이 존재하지 않는 경우
    RIDE_COUPON_NOT_FOUND = 6008;

    // 약관 ACCEPT_TOKEN이 유효하지 않은 경우
    ACCEPT_TOKEN_EXPIRED = 6009;

    // 약관 ACCEPT_TOKEN이 유효하지 않은 경우
    INVALID_ACCEPT_TOKEN = 6010;

    // 약관 수락 조합이 유효하지 않은 경우 (필수 항목이 빠졌거나 등등)
    INVALID_ACCEPTING_TERMS_COMBINATION = 6011;

    // 라이드에 대해 쿠폰을 사용할 수 없는 경우
    RIDE_COUPON_UNAVAILABLE = 6012;

    // 본인 인증 토큰이 유효하지 않은 경우
    INVALID_IDENTITY_CERTIFICATION_TOKEN = 6013;

    // 본인 인증 토큰이 만료된 경우
    IDENTITY_CERTIFICATION_TOKEN_EXPIRED = 6014;

    // 본인 인증이 필요한 경우
    IDENTITY_CERTIFICATION_REQUIRED = 6015;

    // 운전면허 등록이 필요한 경우
    DRIVER_LICENSE_REGISTER_REQUIRED = 6016;

    // PF 구매에 실패한 경우
    DRIVER_PROTECTION_FEE_PRODUCT_PURCHASE_FAILED = 6017;

    // 결제수단 등록이 필요한 경우
    PAYMENT_METHOD_REGISTER_REQUIRED = 6018;

    // PF 구매가 필요한 경우
    DRIVER_PROTECTION_FEE_PRODUCT_PURCHASE_REQUIRED = 6019;

    // 운전면허 등록에 실패한 경우
    DRIVER_LICENSE_REGISTER_FAILED = 6020;

    // 운전면허의 각종 포맷이 유효하지 않은 경우
    INVALID_DRIVER_LICENSE_FORMAT = 6021;

    // 불가능한 PF 상품을 구매 시도한 경우
    INVALID_DRIVER_PROTECTION_FEE_PRODUCT = 6022;

    // 운전면허 검증에 실패한 경우
    DRIVER_LICENSE_VERIFY_FAILED = 6025;

    // (핸들모아 대리) 선호조건이 설정되지 않은 경우
    DAERI_MISSION_PREFERENCES_REQUIRED = 6026;

    // 핸들모아 가입신청 상태가 잘못된 경우
    INVALID_GIG_DRIVER_LICENSE_STATUS = 6027;

    // 미션이 수락할 수 없는 상태인 경우
    INVALID_DRIVER_MISSION_STATUS = 6028;

    // 핸들모아 드라이버 삭제 시 미납된 돈이 있는 경우
    DRIVER_DELETE_FAILED_PENDING_PAYMENT_EXIST = 6029;

    // 핸들모아 드라이버 삭제 시 출금하지 않은 돈이 있는 경우
    DRIVER_DELETE_FAILED_REMAIN_POINT_EXIST = 6030;

    // 사고접수가 이미 된 경우 (강제 접수 불가능)
    ACCIDENT_ALREADY_REPORTED = 6031;

    // 이미 수락한 약관에 대해 다시 수락하려고 하는 경우
    TERMS_ALREADY_ACCEPTED = 6032;

    // Email이 유효하지 않은 경우
    INVALID_EMAIL_FORMAT = 7000;

    // 이미 가입된 Email인 경우
    EMAIL_ALREADY_EXISTS = 7001;

    // 비밀번호 형태가 올바르지 않은 경우.
    INVALID_PASSWORD_FORMAT = 7002;

    // 닉네임 형태가 올바르지 않은 경우.
    INVALID_NICKNAME_FORMAT = 7003;

    // 이미 가입된 전화번호인 경우
    PHONE_NUMBER_ALREADY_EXISTS = 7004;

    // 입력된 카드 정보가 잘못된 경우
    INVALID_CARD_INFO = 7005;

    // 카드를 PG사에 등록하다 실패한 경우
    CARD_REGISTRATION_FAILURE = 7006;

    // 등록 가능한 결제 수단 개수를 초과한 경우
    PAYMENT_METHOD_COUNT_LIMIT_EXCEEDED = 7007;

    // 해당하는 결제 수단이 존재하지 않는 경우
    PAYMENT_METHOD_DOES_NOT_EXIST = 7008;

    // 결제수단 삭제에 실패한 경우
    PAYMENT_METHOD_DELETE_FAILURE = 7009;

    // 휴대폰 번호가 인증되어 있지 않은 경우
    UNVERIFIED_PHONE_NUMBER = 7010;

    // 차량번호가 유효하지 않은 경우
    INVALID_LICENSE_PLATE_FORMAT = 7011;

    // SMS가 보내지지 않은 경우
    SMS_SEND_FAILURE = 8000;

    // 이메일이 보내지지 않은 경우
    EMAIL_SEND_FAILURE = 8001;

    // 외부 요청이 실패한 경우 (e.g. Firebase로의 요청)
    REQUEST_FAILURE = 8002;

    // 어시스트 등록에 실패한 경우
    ASSIST_REGISTRATION_FAILURE = 9000;

    // 어시스트 취소에 실패한 경우
    ASSIST_CANCEL_FAILURE = 9001;

    // 비즈니스 프로필 등록 실패
    BUSINESS_PAYMENT_PROFILE_CREATE_FAILURE = 10000;

    // 결제 프로필 삭제 실패
    PAYMENT_PROFILE_DELETE_FAILURE = 10001;

    // 클라이언트가 올려준 결제 프로필의 결제 수단 정보가 최신이 아닐 때
    PAYMENT_PROFILE_CHANGED = 10002;

    // 클라이언트가 올려준 비즈니스 결제 프로필 등록 정보로 등록할 수 없을 때
    BUSINESS_PAYMENT_PROFILE_ACTIVATION_UNAVAILBLE = 10003;

    // 비즈니스 계정 재인증이 필요한 경우
    BUSINESS_PAYMENT_PROFILE_VERIFICATION_NEEDED = 10004;

    // 해당하는 결제 계정이 존재하지 않는 경우
    PAYMENT_PROFILE_DOES_NOT_EXIST = 10005;

    // 결제 수단이 호출 불가 상태
    INVALID_PAYMENT_METHOD_STATUS = 10006;

    // 운행요금이 기본요금보다 적게 입력되었거나, 통행료만 입력된 경우
    INVALID_RIDE_FEE = 20000;

    // 호출 예약에서 유저 1인당 최대 예약 가능한 예약 수를 넘은 경우
    RIDE_RESERVATION_EXCEED_LIMIT = 30000;

    // 호출 예약에서 예약하려는 시간이 최소 예약 가능 시간 ~ 최대 예약 가능 시간의 범위를 벗어난 경우
    RIDE_RESERVATION_EXPECTED_PICK_UP_AT_NOT_IN_AVAILABLE_TIME = 30001;

    // 호출 예약에서 이미 리스트에 추가한 예약 시간과 겹치는 예약 시간이 있는 경우
    RIDE_RESERVATION_ALREADY_EXISTS_IN_EXPECTED_PICK_UP_AT_LIST = 30002;

    // 호출 예약에서 이미 예약한 호출 예약 건과 겹치는 시간의 예약을 추가하려는 경우
    RIDE_RESERVATION_ALREADY_RESERVED = 30003;
}

// ErrorDTO의 extra Map에 들어가는 key들의 모음
enum ExtraKeys {
    UNSPECIFIED = 0;

    // INVALID_PASSWORD_FORMAT과 함께 내려간다.
    // 비밀번호가 약한 이유의 분류에 대한 값을 가진다.
    // 참고: UserValidatePassword.proto
    PASSWORD_WEAKNESS_REASON = 1000;
}

message ErrorDTO {
    ErrorCode code = 1;
    string message = 2;
    map<string, string> extra = 3;
    StringValue title = 4;
}
